--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "bugspot-widget-mvp",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build:widget": "vite build --config vite.widget.config.ts",
+    "preview": "vite preview",
+    "server": "node server/index.js",
+    "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
+    "lint": "eslint ."
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "html2canvas": "^1.4.1"
+    "html2canvas": "^1.4.1",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "sqlite3": "^5.1.6",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "helmet": "^7.1.0",
+    "rate-limiter-flexible": "^3.0.8",
+    "uuid": "^9.0.1",
+    "concurrently": "^8.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
