--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "helmet": "^7.1.0",
     "rate-limiter-flexible": "^2.4.1",
     "uuid": "^9.0.1",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "@supabase/supabase-js": "^2.39.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
