--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.0",
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "html2canvas": "^1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
+    "rate-limiter-flexible": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "html2canvas": "^1.4.1",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
     "sqlite3": "^5.1.6",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "helmet": "^7.1.0",
-    "rate-limiter-flexible": "^2.4.1",
-    "uuid": "^9.0.1",
-    "concurrently": "^8.2.2",
-    "@supabase/supabase-js": "^2.39.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -40,6 +40,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "terser": "^5.43.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
