--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && vite build --config vite.widget.config.ts",
     "build:widget": "vite build --config vite.widget.config.ts",
     "preview": "vite preview",
     "server": "node server/index.js",
+    "start": "node server/index.js",
     "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
     "lint": "eslint ."
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.50.0",
