--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && vite build --config vite.widget.config.ts",
+    "build": "vite build",
     "build:widget": "vite build --config vite.widget.config.ts",
     "preview": "vite preview",
     "server": "node server/index.js",
