--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "server": "node server/index.js",
     "start": "node server/index.js",
     "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "db:start": "supabase start",
+    "db:stop": "supabase stop",
+    "db:reset": "supabase db reset",
+    "db:status": "supabase status"
   },
   "engines": {
     "node": ">=18"
@@ -29,11 +33,11 @@
     "rate-limiter-flexible": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sqlite3": "^5.1.6",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@playwright/test": "^1.57.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
